# solid-broccoli

./: Cargo.toml  Rocket.toml
migrations/2021-07-19-000211_create_user/: up.sql
migrations/2021-07-27-163023_create_rm/: down.sql  up.sql
src/: .app.rs.swp  .auth.rs.swp  .main.rs.swp  .models.rs.swp  .test.rs.swp  api.rs  app.rs  auth.rs  context.rs  main.rs  models.rs  schema.rs  test.rs
src/api/: .user.rs.swp  exercise.rs  user.rs
static/css/: dashboard.css  login.css
static/js/: .signup.js.swp  .user.js.swp  dashboard.js  misc.js  signup.js  user.js
templates/: .dashboard.html.tera.swp  .signup.html.tera.swp  base.html.tera  dashboard.html.tera  login.html.tera  signup.html.tera
