[package]
name = "ontrack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0" # Migration support in software
rust-argon2 = "0.8.3"
serde = "1.0.126"
rand = "0.8.4"
